--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   font_awesome_flutter: ^10.4.0
   url_launcher: ^6.1.11
+  auto_route: ^7.8.1
 
 dev_dependencies:
   flutter_test:
